# mem0-personamem-benchmarking

./: .env.example  .gitignore  README.md  experiment_runner.py  mem0_full_stack.py  mem0_safe_graph.py  mem0_safe_json.py  personamem_benchmark.py  personamem_mem0_prep.py  prompts.py  pyproject.toml  run_multimodal_experiment.py  run_text_experiment.py  view_multimodal_images.py
docs/: NEO4J_SETUP.md
notebooks/: accuracy_plots.ipynb  checking_data.ipynb  experiment_personamem.ipynb  experiment_personamem_multi.ipynb  llm_as_a_judge.ipynb  mem0_filling_results.ipynb  multimodal_stage1_stage2_analysis.ipynb  stage2_analysis.ipynb  testing_mem0.ipynb  using_presoname_mem.ipynb
scripts/: personamem_question_overlap_venn.py  plot_stage2_latency.py  view_multimodal_images.py
src/personamem/: __init__.py  dataset_exports.py  experiment_runner.py  mem0_full_stack.py  mem0_safe_graph.py  mem0_safe_json.py  paths.py  personamem_benchmark.py  personamem_mem0_prep.py  prompts.py
